tests/pos/simple/arithmetic-option.ts

/*@ option REALS */

var a = 10;

var b = 20;

assert(a*a + b*b > 499);
