tests/neg/simple/29-arithmetic-option.ts

/*@ option REALS */

var a = 10;

var b = 19;

assert(a * a + b * b > 499);
